<resources>
    <string name="app_name">Simkomdig</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lipsum">  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus urna diam, malesuada eu quam id, finibus consectetur augue. Donec at risus nunc. Vivamus leo tortor, imperdiet vel facilisis a, tincidunt non libero. Maecenas arcu massa, rutrum varius elementum suscipit, elementum in turpis. Nulla tempus, nibh aliquam luctus efficitur, tortor est dictum magna, sit amet imperdiet lorem leo a arcu. Sed luctus ultricies ligula ut aliquet. Morbi ipsum magna, gravida eget consectetur vitae, molestie nec eros. Suspendisse potenti. Nullam purus nibh, egestas quis enim sed, congue rutrum metus. Sed et magna a sapien cursus semper.
            \n \n Pellentesque ex magna, fermentum at ligula sed, pulvinar lacinia orci. Quisque sit amet mauris sit amet tellus fringilla luctus nec sit amet sem. Mauris tristique mauris eget nunc dignissim facilisis. Pellentesque maximus leo eu nibh gravida condimentum. Nunc at nisi erat. Integer congue dignissim aliquet. Quisque vulputate efficitur ex ac ultricies. Etiam vel libero turpis. Etiam venenatis metus a justo malesuada, ut feugiat magna pulvinar.
            \n \n Quisque in fermentum dui, vitae tempus risus. Proin ut blandit lacus, vitae laoreet purus. Aliquam sed metus dapibus, semper dolor vel, dapibus nibh. Nullam ac nisl sit amet nisi faucibus rhoncus. Fusce volutpat euismod magna, in sagittis est. Quisque tincidunt elit quis elit scelerisque venenatis. Vivamus vel dui viverra, pretium mi at, convallis tellus. Sed vestibulum eu velit id egestas. Nulla pellentesque dignissim eros, sed varius eros ultricies a. Vivamus vel lobortis justo, non sagittis odio.
            \n \n

    </string>
    <string name="welcome">
        Selamat Datang
        \n \n Aplikasi ini adalah aplikasi pendukung pembelajaran Simulasi dan Komunikasi Digital di SMKN 1 Singkarak.
       
    </string>
    //Materi
    <string name="word_preface">
        Salah satu kegiatan mengelola informasi digital adalah menulis/membuat/menyusun naskah digital menggunakan aplikasi pengolah kata. Pada media ini, digunakan perangkat lunak Microsoft Word 2013.
    </string>

    <!-- Misc-->
    <string name="emailhelp">Untuk bantuan silahkan hubungi: \n hazirafakhrurrozi@gmail.com</string>
    <string name="about">Seluruh materi disadur dari Bahan Ajar Simulasi dan Komunikasi Digital Terbitan Kementrian Pendidikan Kebudayaan</string>

    <string name="titleHome">Home</string>
    <string name="titleAbout">About</string>
    <string name="titleHelp">Help</string>
    <string name="titleMore">More</string>
    <string name="titleMateri1">Materi 1: Simulasi dan Komunikasi Digital</string>
    <string name="titleMateri2">Materi 2 : Logika dan Algoritma</string>
    <string name="titleMateri3">Materi 3 : Pengelolaan Informasi</string>
    <string name="titleMateri2_1">Materi 2.1: Penggalian Informasi</string>
    <string name="titleMateri2_2">Materi 2.1: Peta Minda</string>
    <string name="titleMateri3_1_1">Materi 3.1: Paragraf</string>
    <string name="titleMateri3_1">Materi 3.2: Perangkat Lunak Pengolah Kata</string>
    <string name="titleMateri3_2">Materi 3.3: Perangkat Lunak Pengolah Angka</string>
    <string name="titleMateri3_3">Materi 3.4: Perangkat Lunak Presentasi</string>
    <string name="titleMateri3_4">Materi 3.5: Teknik Presentasi</string>
    <string name="titleMateri3_5">Materi 3.6: Ebook</string>
    <string name="titleMateriLangkah">Langkah Kerja</string>
    <string name="titleMateriLatihan">Latihan</string>
    <string name="titleMateriEvaluas">Evaluasi</string>
    <string name="menuPengolahKata">Materi 1 - Pengolah Kata</string>
    <string name="menuPengolahAngka">Materi 2 - Pengolah Angka</string>
    <string name="menuPresentasi">Perangkat Lunak Presentasi</string>
    <string name="menuDaftarMateri">Daftar Materi</string>
    <string name="menuPerangkat">Perangkat Pembelajaran</string>
    <string name="menuKIKD">KI-KD Pembelajaran</string>
    <string name="menuSilabus">Silabus Pembelajaran</string>
    <string name="menuRPP">Rencana Pembelajaran</string>
    <string name="menuHome">Beranda</string>
    <string name="buttonQuiz">Mulai Latihan</string>
    <string name="menuVideo">Video</string>
    <string name="daftarVideo">Daftar Video</string>
    <string name="Quiz">Quiz</string>

    //Video
    <string name="TOCvid">Membuat Daftar Isi Otomatis</string>
    <string name="vidExcel">Membuat Diagram dengan Excel</string>
    <string name="vidppt">Animasi pada PowerPoint</string>
    <string name="vidpascal">Penerapan Algoritma pada Bahasa Pemrograman</string>
    <string name="TOCvidtutor">Video Tutorial</string>

    //TableLayouts
    <string name="tabHeaderFitur">Nama Fitur</string>
    <string name="tabHeaderFungsi">Fungsi</string>

    //
    <string name="pageLayoutText">"Untuk mengatur tata letak dokumen, hal pertama yang perlu diketahui adalah orientasi halaman vertikal (portrait) atau horisontal (landscape). Mengatur orientasi halaman dapat dilakukan dengan cara sebagai berikut.
            \n a. Pilih tab PAGE LAYOUT .
            \n b. Klik Orientation.
            \n c. Pilih Portrait atau Landscape untuk mengubah orientasi halaman.

            \n Selain pengaturan orientasi, juga perlu mengetahui ukuran kertas dan margin yang akan digunakan untuk mencetak dokumen tersebut.
            \n Margin merupakan garis pinggir yang memisahkan tepi kertas dan area pengetikan"
    </string>
    <string name="fontText">
        Fitur untuk pengaturan font dalam perangkat lunak pengolah kata dikelompokkan jadi satu dalam
        kelompok font. Kelompok tersebut memiliki berbagai pilihan untuk pemformatan font pada suatu
        teks dokumen, misalnya mengatur jenis font, ukuran font, atau warna
    </string>

    <string name="app_name_with_index">Mobile Learning (%1$d/%2$d)</string>
    <string name="info">Info</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>

    <string name="pick_file">Pick file</string>
    <string name="toast_pick_file_error">Unable to pick file. Check status of file manager.</string>

    //Emoji
    <string name="correct"> &#128516;  \n Jawaban Benar \n &#10004;</string>
    <string name="incorrect">&#128532; \n Jawaban Salah \n &#10060; </string>
</resources>
