<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:tag="Home">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="38dp"
            android:layout_centerInParent="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="8dp"
            android:text="Home"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/quicksand_medium"
            android:text="@string/welcome"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <View
            android:id="@+id/divider"
            android:layout_width="409dp"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/quicksand_medium"
            android:text="@string/menuDaftarMateri"
            android:textAlignment="viewStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider" />

        <HorizontalScrollView
            android:id="@+id/materiScroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView9">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonsimdig"
                    android:layout_width="250dp"
                    android:layout_height="175dp"
                    android:backgroundTint="@color/design_default_color_background"
                    android:drawableTop="@drawable/smk"
                    android:fontFamily="@font/quicksand_medium"
                    android:onClick="openMateri1"
                    android:text="@string/titleMateri1"
                    android:textAlignment="inherit"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:typeface="normal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/buttoninfo"
                    android:layout_width="250dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="16dp"
                    android:backgroundTint="@color/design_default_color_background"
                    android:drawableTop="@drawable/infor"
                    android:fontFamily="@font/quicksand_medium"
                    android:onClick="openMateri1"
                    android:text="@string/titleMateri2"
                    android:textAlignment="inherit"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:typeface="normal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/buttonsimdig"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/buttonmind"
                    android:layout_width="250dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="16dp"
                    android:backgroundTint="@color/design_default_color_background"
                    android:drawableTop="@drawable/mind"
                    android:fontFamily="quicksand_medium"
                    android:onClick="openMateri1"
                    android:text="@string/titleMateri2_2"
                    android:textAlignment="inherit"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:typeface="normal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/buttoninfo"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/buttoninfo2"
                    android:layout_width="250dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="16dp"
                    android:backgroundTint="@color/design_default_color_background"
                    android:drawableTop="@drawable/infor"
                    android:fontFamily="quicksand_medium"
                    android:onClick="openMateri1"
                    android:text="@string/titleMateri3"
                    android:textAlignment="inherit"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:typeface="normal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/buttonmind"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/buttonword"
                    android:layout_width="250dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="16dp"
                    android:backgroundTint="@color/design_default_color_background"
                    android:drawableTop="@drawable/word"
                    android:fontFamily="@font/quicksand_medium"
                    android:onClick="openMateri1"
                    android:text="@string/titleMateri3_1"
                    android:textAlignment="inherit"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:typeface="normal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/buttonparagraf"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/buttonparagraf"
                    android:layout_width="250dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="16dp"
                    android:backgroundTint="@color/design_default_color_background"
                    android:drawableTop="@drawable/doc"
                    android:fontFamily="@font/quicksand_medium"
                    android:onClick="openMateri1"
                    android:text="@string/titleMateri3_1_1"
                    android:textAlignment="inherit"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:typeface="normal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/buttoninfo2"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/buttonexcel"
                    android:layout_width="250dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="16dp"
                    android:backgroundTint="@color/design_default_color_background"
                    android:drawableTop="@drawable/excel"
                    android:fontFamily="@font/quicksand_medium"
                    android:onClick="openMateri1"
                    android:text="@string/titleMateri3_2"
                    android:textAlignment="inherit"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:typeface="normal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/buttonword"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/buttonpowerpoint"
                    android:layout_width="250dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="16dp"
                    android:backgroundTint="@color/design_default_color_background"
                    android:drawableTop="@drawable/ppt"
                    android:fontFamily="@font/quicksand_medium"
                    android:onClick="openMateri1"
                    android:text="@string/titleMateri3_3"
                    android:textAlignment="inherit"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:typeface="normal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/buttonexcel"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/buttonpresentasi"
                    android:layout_width="250dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="16dp"
                    android:backgroundTint="@color/design_default_color_background"
                    android:drawableTop="@drawable/ppt"
                    android:fontFamily="@font/quicksand_medium"
                    android:onClick="openMateri1"
                    android:text="@string/titleMateri3_4"
                    android:textAlignment="inherit"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:typeface="normal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/buttonpowerpoint"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/buttonebook"
                    android:layout_width="250dp"
                    android:layout_height="0dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:backgroundTint="@color/design_default_color_background"
                    android:drawableTop="@drawable/ebook"
                    android:fontFamily="@font/quicksand_medium"
                    android:onClick="openMateri1"
                    android:text="@string/titleMateri3_5"
                    android:textAlignment="inherit"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:typeface="normal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/buttonpresentasi"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </HorizontalScrollView>

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materiScroll" />

        <TextView
            android:id="@+id/textPerangkat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/quicksand_medium"
            android:text="@string/menuPerangkat"
            android:textAlignment="viewStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            android:typeface="sans"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider2" />

        <HorizontalScrollView
            android:id="@+id/perangkatScroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="96dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textPerangkat">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/perangkatLayout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonkikd"
                    android:layout_width="250dp"
                    android:layout_height="175dp"
                    android:backgroundTint="@color/design_default_color_background"
                    android:drawableTop="@drawable/doc"
                    android:fontFamily="monospace"
                    android:onClick="openMateri1"
                    android:text="@string/menuKIKD"
                    android:textAlignment="inherit"
                    android:textStyle="bold"
                    android:typeface="normal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/buttonsilabus"
                    android:layout_width="250dp"
                    android:layout_height="175dp"
                    android:layout_marginStart="16dp"
                    android:backgroundTint="@color/design_default_color_background"
                    android:drawableTop="@drawable/doc"
                    android:fontFamily="monospace"
                    android:onClick="openMateri1"
                    android:text="@string/menuSilabus"
                    android:textAlignment="inherit"
                    android:textStyle="bold"
                    android:typeface="normal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/buttonkikd"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/buttonrpp"
                    android:layout_width="250dp"
                    android:layout_height="175dp"
                    android:layout_marginStart="16dp"
                    android:backgroundTint="@color/design_default_color_background"
                    android:drawableTop="@drawable/doc"
                    android:fontFamily="monospace"
                    android:onClick="openMateri1"
                    android:text="@string/menuRPP"
                    android:textAlignment="inherit"
                    android:textStyle="bold"
                    android:typeface="normal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/buttonsilabus"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </HorizontalScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

